--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^19.2.4",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
-    "@supabase/supabase-js": "2.48.1"
+    "@supabase/supabase-js": "2.48.1",
+    "@google/genai": "^1.39.0",
+    "types": "^0.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
