feat: Add academic report generation and document templating
Introduces functionality for generating academic reports using docxtemplater and pizzip. This includes defining new types for report templates and academic reports, and integrating the necessary libraries into the project.

The `ReportsModule` is added to the `App.tsx` navigation, and corresponding API services for templates are exposed. UI elements and hooks are updated to support this new module. Additionally, general code cleanup and dependency updates are performed.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react": "^19.2.4",
     "@supabase/supabase-js": "2.48.1",
     "@google/genai": "^1.39.0",
-    "types": "^0.1.1"
+    "types": "^0.1.1",
+    "docxtemplater": "^3.41.0",
+    "pizzip": "^3.1.4",
+    "file-saver": "^2.0.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
