feat: Add grading setup module and improve API handling
Introduces a new 'grading_setup' module to the application's navigation. This change also refactors Supabase client initialization to gracefully handle missing credentials and improves error handling in the Dashboard module for potential RLS (Row Level Security) issues. Additionally, the grading view now correctly identifies if a station is active for editing.

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,22 @@
+# Dependencias
+node_modules/
+
+# Configuración sensible
+services/api/supabase-config.ts
+.env
+.env.local
+.env.*.local
+
+# Build
+dist/
+build/
+.cache/
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
